--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,12 @@
-{
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "labels": ["renovate"],
-  "branchPrefix": "renovate/",
-  "automerge": true
+{ 
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json", 
+  "extends": [ 
+    "config:recommended" 
+  ], 
+  "labels": ["renovate"], 
+  "branchPrefix": "renovate/", 
+  "automerge": true,
+  "enabledManagers": [
+    "dockerfile"
+  ]
 }
