--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,18 +25,18 @@ jobs:
         with:
           install: true
 
-      - name: Extract Jenkins version from Dockerfile
+      - name: Extract Jenkins inbound controller version from Dockerfile
         id: get_version
         run: |
-          version=$(grep -oP 'FROM [^:]+:\K[\d\.]+' Dockerfile)
-          echo "version=$version" >> $GITHUB_OUTPUT
-
-      - name: Log the extracted version
-        run: echo "Jenkins version is ${{ steps.get_version.outputs.version }}"
+          version=$(grep -oP 'FROM\s+[^\s:]+:\K[^\s]+' Dockerfile)
+          echo "version=$version" >> "$GITHUB_OUTPUT"
 
       - name: Log in to GitHub Container Registry
-        run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push multi-platform Docker image (version + latest)
         run: |
