--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           install: true
 
-      - name: Extract Jenkins inbound controller version from Dockerfile
+      - name: Extract Jenkins inbound agent version from Dockerfile
         id: get_version
         run: |
           version=$(grep -oP 'FROM\s+[^\s:]+:\K[^\s]+' Dockerfile)
